Atualizações na ´página inicial
Alterações no código para adaptação aos itens do menu

--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -95,82 +95,35 @@
 	============================================= -->
     <section id="welcome">
         <div class="container">
-            <h2>Welcome To <span>Rise</span></h2>
+            <h2>Bem vindo ao <span>B</span>ook<span>A</span>way</h2>
             <hr class="sep">
-            <p>Make Yourself At Home Don't Be Shy</p>
+            <p>Movimente seus livros!</p>
             <img class="img-responsive center-block wow fadeInUp" data-wow-delay=".3s" src="img/welcome/logo.png" alt="logo">
         </div>
     </section>
 
-    <!-- Services
+    <!-- Sobre
 	============================================= -->
     <section id="services">
         <div class="container">
-            <h2>What We Do</h2>
+            <h2>O que é</h2>
             <hr class="light-sep">
-            <p>We Can Do Crazy Things</p>
             <div class="services-box">
                 <div class="row wow fadeInUp" data-wow-delay=".3s">
-                    <div class="col-md-4">
-                        <div class="media-left"><span class="icon-lightbulb"></span></div>
-                        <div class="media-body">
-                            <h3>Creative Design</h3>
-                            <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="media-left"><span class="icon-mobile"></span></div>
-                        <div class="media-body">
-                            <h3>Bootstrap</h3>
-                            <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
-                        </div>
 
-                    </div>
-                    <div class="col-md-4">
-                        <div class="media-left"><span class="icon-compass"></span></div>
-                        <div class="media-body">
-                            <h3>Sass &amp; Compass</h3>
-                            <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
-                        </div>
-
-                    </div>
-
-                    <div class="row wow fadeInUp" data-wow-delay=".6s">
-                        <div class="col-md-4">
-                            <div class="media-left"><span class="icon-adjustments"></span></div>
-                            <div class="media-body">
-                                <h3>Easy To Customize</h3>
-                                <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
-                            </div>
-
-                        </div>
-                        <div class="col-md-4">
-                            <div class="media-left"><span class="icon-tools"></span></div>
-                            <div class="media-body">
-                                <h3>Photoshop</h3>
-                                <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
-                            </div>
-
-                        </div>
-                        <div class="col-md-4">
-                            <div class="media-left"><span class="icon-wallet"></span></div>
-                            <div class="media-body">
-                                <h3>Money Saver</h3>
-                                <p>Fringilla augue at maximus vestibulum. Nam pulvinar vitae neque et porttitor. Praesent sed nisi eleifend.</p>
-                            </div>
-
-                        </div>
-                    </div>
+ 							<p>Literatura é uma arte, um instrumento de comunicação trasmissor de conhecimento.</p>
+                            <p>Para colaborar na disseminação desse, foi criado o BookAway. Um facilitador e incentivador da leitura e circulação de livros, promovendo a interação entre leitores assim como o repasse e desapego.</p>
+                            <P>Mantenha seu livreiro online. Compre, venda, doe ou troque obras literárias. Encontre livros perto de você. Troque ideias com outros leitores.</P>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Portfolio
+    <!-- App
 	============================================= -->
     <section id="portfolio">
         <div class="container-fluid">
-            <h2>Our Work</h2>
+            <h2>Acesse pelo celular</h2>
             <hr class="sep">
             <p>Showcase Your Amazing Work With Us</p>
             <div class="row">
@@ -267,11 +220,11 @@
             </div>
         </div>
     </section>
-    <!-- Work Process
+    <!-- Cadastro
 	============================================= -->
     <section id="work-process">
         <div class="container">
-            <h2>Work Process</h2>
+            <h2>Crie Um Cadastro</h2>
             <hr class="sep">
             <p>What Happen In The Background</p>
             <div class="row wow fadeInUp" data-wow-delay=".3s">
@@ -294,11 +247,11 @@
             </div>
         </div>
     </section>
-    <!-- Some Fune Facts
+    <!-- Acesse 
 	============================================= -->
     <section id="fun-facts">
         <div class="container">
-            <h2>Some Fun Facts </h2>
+            <h2>Acesse </h2>
             <hr class="light-sep">
             <p>Fun Facts</p>
             <div class="row wow fadeInUp" data-wow-delay=".3s">
@@ -325,96 +278,12 @@
             </div>
         </div>
     </section>
-    <!-- Some Fune Facts
-	============================================= -->
-    <section id="team">
-        <div class="container">
-            <h2>Our Team</h2>
-            <hr class="sep">
-            <p>Designers Behind This Work</p>
-            <div class="row wow fadeInUp" data-wow-delay=".3s">
-                <div class="col-md-4">
-                    <div class="team">
-                        <img class="img-responsive center-block" src="img/team/MariaDoe.jpg" alt="1">
-                        <h4>Maria Doe</h4>
-                        <p>Designer</p>
-                        <div class="team-social-icons">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team">
-                        <img class="img-responsive center-block" src="img/team/JasonDoe.jpg" alt="2">
-                        <h4>Jason Doe</h4>
-                        <p>Developer</p>
-                        <div class="team-social-icons">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="team">
-                        <img class="img-responsive center-block" src="img/team/MikeDoe.jpg" alt="3">
-                        <h4>Mike Doe</h4>
-                        <p>Photographer</p>
-                        <div class="team-social-icons">
-                            <a href="#"><i class="fa fa-facebook"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-dribbble"></i></a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Testimonials
-	============================================= -->
-    <section id="testimonials">
-        <div class="container">
-            <h2>Testimonials</h2>
-            <hr class="light-sep">
-            <p>What Clients Say About Us</p>
-            <div id="owl-testi" class="owl-carousel owl-theme">
-                <div class="item">
-                    <div class="quote">
-                        <i class="fa fa-quote-left left fa-2x"></i>
-                        <h5>I’am amazed, I should say thank you so much for your awesome template. Design is so 
-good and neat, every detail has been taken care these team are realy amazing and talented! I will 
-work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
-
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="quote">
-                        <i class="fa fa-quote-left left fa-2x"></i>
-                        <h5>I’am amazed, I should say thank you so much for your awesome template. Design is so 
-good and neat, every detail has been taken care these team are realy amazing and talented! I will 
-work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
-
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="quote">
-                        <i class="fa fa-quote-left left fa-2x"></i>
-                        <h5>I’am amazed, I should say thank you so much for your awesome template. Design is so 
-good and neat, every detail has been taken care these team are realy amazing and talented! I will 
-work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></h5>
-
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+    
     <!-- Contact Us
 	============================================= -->
     <section id="contact">
         <div class="container">
-            <h2>Contact Us</h2>
+            <h2>Contato</h2>
             <hr class="sep">
             <p>Get In Touch</p>
             <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
@@ -433,9 +302,6 @@ work only with <span>Rise</span>.<i class="fa fa-quote-right right fa-2x"></i></
             </div>
         </div>
     </section>
-    <!-- Google Map
-	============================================= -->
-    <div id="map"></div>
     <!-- Footer
 	============================================= -->
     <footer>
