--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -125,7 +125,7 @@
         <div class="container-fluid">
             <h2>Acesse pelo celular</h2>
             <hr class="sep">
-            <p>Baixe nosso App na Google Store e aplie seu horizonte de conhecimentos literários.</p>
+            <p>Baixe nosso App na Google Store e amplie seu horizonte de conhecimentos literários.</p>
 			<div style="background-image: url(img/portfolio/app.jpg); background-size: 100%; height: 500px;">
 				<a class="btn btn-light" href="#" style='margin-top: 150px;'>Instale Agora</a>
 			</div>
