Adição código cadastro
Adição do código referente ao item de criação de cadastro.

--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -135,28 +135,30 @@
     </section>
     <!-- Cadastro
 	============================================= -->
-    <section id="work-process">
+    <section id="contact">
         <div class="container">
             <h2>Crie Um Cadastro</h2>
             <hr class="sep">
-            <p>What Happen In The Background</p>
-            <div class="row wow fadeInUp" data-wow-delay=".3s">
-                <div class="col-lg-3">
-                    <span class="icon-chat"></span>
-                    <h4>1.Discuss</h4>
-                </div>
-                <div class="col-lg-3">
-                    <span class="icon-circle-compass"></span>
-                    <h4>2.Sketch</h4>
-                </div>
-                <div class="col-lg-3">
-                    <span class="icon-browser"></span>
-                    <h4>3.Make</h4>
-                </div>
-                <div class="col-lg-3">
-                    <span class="icon-global"></span>
-                    <h4>4.Publish</h4>
-                </div>
+            <p>Preencha os dados abaixo para se cadastrar.</p>
+            <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
+                <form>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="Name" placeholder="Nome">
+                    </div>
+					<div class="form-group">
+                        <input type="text" class="form-control" id="UserName" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="Email" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" class="form-control" id="senha" placeholder="Senha">
+                    </div>
+					<div class="form-group">
+                        <input type="password" class="form-control" id="confirma" placeholder="Corfirmar Senha">
+                    </div>
+                    <a href="#" class="btn-block">Cadastrar</a>
+                </form>
             </div>
         </div>
     </section>
