Adição código de login
Adição do código referente ao item login do menu.

--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -168,32 +168,20 @@
         <div class="container">
             <h2>Acesse </h2>
             <hr class="light-sep">
-            <p>Fun Facts</p>
-            <div class="row wow fadeInUp" data-wow-delay=".3s">
-                <div class="col-lg-3">
-                    <span class="icon-happy"></span>
-                    <h2 class="number timer">367</h2>
-                    <h4>Happy Clients</h4>
-                </div>
-                <div class="col-lg-3">
-                    <span class="icon-trophy"></span>
-                    <h2 class="number timer">150</h2>
-                    <h4>Project Done</h4>
-                </div>
-                <div class="col-lg-3">
-                    <span class="icon-wine"></span>
-                    <h2 class="number timer">121</h2>
-                    <h4>Glass Of Wine</h4>
-                </div>
-                <div class="col-lg-3">
-                    <span class="icon-documents"></span>
-                    <h2 class="number timer">10000</h2>
-                    <h4>Lines Of Code</h4>
-                </div>
+            <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
+                <form>
+	            <div class="form-group">
+                        <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="text" class="form-control" id="LoginUnico" placeholder="Username ou Email">
+                    </div>
+                    <div class="form-group">
+                        <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="password" class="form-control" id="senha" placeholder="Senha">
+                    </div>
+                    <a href="#" class="btn-block" style='background: #fff; color: #0d0d0d; margin-top: 35px;'>Login</a>
+		    <a href="#" class="btn-block" style='background: #3B5998;' >Login com facebook</a>
+                </form>
             </div>
         </div>
     </section>
-    
     <!-- Contact Us
 	============================================= -->
     <section id="contact">
