--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -165,11 +165,11 @@
     <!-- Acesse 
 	============================================= -->
     <section id="fun-facts">
-        <div class="container">
+        <div style='margin-bottom: 200px;' class="container">
             <h2>Acesse </h2>
             <hr class="light-sep">
             <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
-                <form>
+                <form style='margin-top:70px;'>
 	            <div class="form-group">
                         <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="text" class="form-control" id="LoginUnico" placeholder="Username ou Email">
                     </div>
@@ -182,42 +182,8 @@
             </div>
         </div>
     </section>
-    <!-- Contact Us
+    <!-- Informações 
 	============================================= -->
-    <section id="contact">
-        <div class="container">
-            <h2>Contato</h2>
-            <hr class="sep">
-            <p>Get In Touch</p>
-            <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
-                <form>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="Name" placeholder="Name">
-                    </div>
-                    <div class="form-group">
-                        <input type="text" class="form-control" id="Email" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                        <textarea class="form-control" rows="3" placeholder="Message"></textarea>
-                    </div>
-                    <a href="#" class="btn-block">Send</a>
-                </form>
-            </div>
-        </div>
-    </section>
-    <!-- Footer
-	============================================= -->
-    <footer>
-        <div class="container">
-            <h1>Rise</h1>
-            <div class="social">
-                <a href="#"><i class="fa fa-facebook fa-2x"></i></a>
-                <a href="#"><i class="fa fa-twitter fa-2x"></i></a>
-                <a href="#"><i class="fa fa-dribbble fa-2x"></i></a>
-            </div>
-            <h6>&copy; 2015 Rise.Development By BootstrapDev</h6>
-        </div>
-    </footer>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
