Correção dos botões
Correção do que é aberto ao clique de cada botão.

--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -59,8 +59,8 @@
                             <li><a href="#owl-hero" class="page-scroll">Home</a></li>
                             <li><a href="#services" class="page-scroll">Sobre</a></li>
                             <li><a href="#portfolio" class="page-scroll">App</a></li>
-                            <li><a href="#team" class="page-scroll">Cadastro</a></li>
-                            <li><a href="#contact" class="page-scroll">Login</a></li>
+                            <li><a href="#contact" class="page-scroll">Cadastro</a></li>
+                            <li><a href="#fun-facts" class="page-scroll">Login</a></li>
                         </ul>
                     </div>
                 </div>
@@ -71,34 +71,23 @@
                 <div class="caption">
                     <h1 style='text-shadow :#000 1px 1px 2px'><span>B</span>ook<span>A</span>way</h1>
                     <h6 style = 'margin-bottom:100px; text-shadow :#000 1px 1px 2px;'>Books in movement</h6>
-                    <a class="btn btn-light" href="#">Saiba Mais</a>
+                    <a class="btn btn-light" href="#services">Saiba Mais</a>
                 </div>
             </div>
             <div class="item" style="background-image: url(img/sliders/Slide2.jpg)">
                 <div class="caption">
                     <h1 style='text-shadow :#000 1px 1px 2px'><span>B</span>ook<span>A</span>way</h1>
                     <h6 style = 'margin-bottom:100px; text-shadow :#000 1px 1px 2px;'>Faça login e encontre livros próximos a você ou crie um novo cadastro</h6>
-                    <a class="btn btn-transparent" href="#">Cadastre-se</a><a class="btn btn-light" href="#">Login</a>
+                    <a class="btn btn-transparent" href="#contact">Cadastre-se</a><a class="btn btn-light" href="#fun-facts">Login</a>
                 </div>
             </div>
             <div class="item" style="background-image: url(img/sliders/Slide3.jpg)">
                 <div class="caption">
                     <h1 style='text-shadow :#000 1px 1px 2px'><span>B</span>ook<span>A</span>way</h1>
                     <h6 style = 'margin-bottom:100px; text-shadow :#000 1px 1px 2px;'>Baixe o aplicativo e use o BokAway no seu celular</h6>
-                    <a class="btn btn-light" href="#">Baixe Nosso App</a>
+                    <a class="btn btn-light" href="#portfolio">Baixe Nosso App</a>
                 </div>
             </div>
-        </div>
-    </section>
-
-    <!-- Welcome
-	============================================= -->
-    <section id="welcome">
-        <div class="container">
-            <h2>Bem vindo ao <span>B</span>ook<span>A</span>way</h2>
-            <hr class="sep">
-            <p>Movimente seus livros!</p>
-            <img class="img-responsive center-block wow fadeInUp" data-wow-delay=".3s" src="img/welcome/logo.png" alt="logo">
         </div>
     </section>
 
@@ -106,7 +95,7 @@
 	============================================= -->
     <section id="services">
         <div class="container">
-            <h2>O que é</h2>
+            <h2>Bem vindo ao BookAway</h2>
             <hr class="light-sep">
             <div class="services-box">
                 <div class="row wow fadeInUp" data-wow-delay=".3s">
