--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -95,14 +95,38 @@
 	============================================= -->
     <section id="services">
         <div class="container">
-            <h2>Bem vindo ao BookAway</h2>
+            <h2>Conheça o BookAway</h2>
             <hr class="light-sep">
             <div class="services-box">
                 <div class="row wow fadeInUp" data-wow-delay=".3s">
 
- 							<p>Literatura é uma arte, um instrumento de comunicação trasmissor de conhecimento.</p>
-                            <p>Para colaborar na disseminação desse, foi criado o BookAway. Um facilitador e incentivador da leitura e circulação de livros, promovendo a interação entre leitores assim como o repasse e desapego.</p>
-                            <P>Mantenha seu livreiro online. Compre, venda, doe ou troque obras literárias. Encontre livros perto de você. Troque ideias com outros leitores.</P>
+ 							<h4 style="color: #fff; margin-bottom: 60px;""><i>Para amantes da arte literária.</i></h4>
+ 							<ul style="list-style:none;">
+ 							<li style="display:inline;">
+ 							<div style='text-align: left justify; width: 450px; display: inline-block; margin-right: 150px; margin-bottom: 60px; '>
+                            <h3 style='color: #fff;'>Mantenha seu livreiro online.</h3>
+                            <p>Cadastre os seus livros e monte sua estante, ou então veja as estantes de outros leitores.</p>
+                            </div>
+                            </li>
+                            <li style="display:inline;">
+                            <div style='text-align: left justify; width: 450px; display: inline-block; margin-bottom: 60px;'>
+                            <h3 style='color: #fff;'>Encontre livros perto de você.</h3>
+                            <p>Proure por livros disponíveis perto de você, ou então vá direto ao ponto e busque pelo livro que deseja.</p>
+                            </div>
+                            </li>
+                            <li style="display:inline;">
+                            <div style='text-align: left justify; width: 450px;display: inline-block;margin-right: 150px;'>
+                            <h3 style='color: #fff;'>Compre, venda, doe ou troque obras literárias.</h3>
+                            <p>Por um simples sistema de tags, fica fácil ver qual a disponibilidade do livro que você está interessado.</p>
+                            </div>
+                            </li>
+                            <li style="display:inline;">
+                            <div style='text-align: left justify; width: 450px; display: inline-block; '>
+                            <h3 style='color: #fff;'>Troque ideias com outros leitores.</h3>
+                            <p>Como usuário do BookAway você poderá conversar e encontrar leitores com gostos parecidos com o seu. Caso queira realizar alguma tramitassão, chege a um acordo tratando diretamento com o dono do livro.</p>
+                            </div>
+                            </li>
+                            </ul>
                 </div>
             </div>
         </div>
@@ -116,7 +140,7 @@
             <hr class="sep">
             <p>Baixe nosso App na Google Store e amplie seu horizonte de conhecimentos literários.</p>
 			<div style="background-image: url(img/portfolio/app.jpg); background-size: 100%; height: 500px;">
-				<a class="btn btn-light" href="#" style='margin-top: 150px;'>Instale Agora</a>
+				<a class="btn btn-light" href="#" style='margin-top: 150px; width: 300px;'>Instale Agora</a>
 			</div>
                 </div>
             </div>
@@ -136,6 +160,9 @@
                     </div>
 		    <div class="form-group">
                         <input type="text" class="form-control" id="UserName" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <input type="number" class="form-control" id="CEP" placeholder="CEP">
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control" id="Email" placeholder="Email">
