Retirado logo do menu
Retirado símbolo logo do menu.

--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -51,7 +51,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img src="img/logo/logo.png" class="img-responsive" alt="logo"></a>
+                    <a class="navbar-brand" href="#"></a>
                 </div>
                 <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                     <div class="col-md-8 col-xs-12 nav-wrap">
@@ -100,22 +100,22 @@
             <div class="services-box">
                 <div class="row wow fadeInUp" data-wow-delay=".3s">
 
- 							<h4 style="color: #fff; margin-bottom: 60px;""><i>Para amantes da arte literária.</i></h4>
+ 							<h4 style="color: #fff; margin-bottom: 30px;""><i>Para amantes da arte literária.</i></h4>
  							<ul style="list-style:none;">
  							<li style="display:inline;">
- 							<div style='text-align: left justify; width: 450px; display: inline-block; margin-right: 150px; margin-bottom: 60px; '>
+ 							<div style='text-align: left justify; width: 450px; display: inline-block; margin-right: 150px; margin-bottom: 50px; '>
                             <h3 style='color: #fff;'>Mantenha seu livreiro online.</h3>
                             <p>Cadastre os seus livros e monte sua estante, ou então veja as estantes de outros leitores.</p>
                             </div>
                             </li>
                             <li style="display:inline;">
-                            <div style='text-align: left justify; width: 450px; display: inline-block; margin-bottom: 60px;'>
+                            <div style='text-align: left justify; width: 450px; display: inline-block; margin-bottom: 50px;'>
                             <h3 style='color: #fff;'>Encontre livros perto de você.</h3>
                             <p>Proure por livros disponíveis perto de você, ou então vá direto ao ponto e busque pelo livro que deseja.</p>
                             </div>
                             </li>
                             <li style="display:inline;">
-                            <div style='text-align: left justify; width: 450px;display: inline-block;margin-right: 150px;'>
+                            <div style='text-align: left justify; width: 450px;display: inline-block; margin-right: 150px;'>
                             <h3 style='color: #fff;'>Compre, venda, doe ou troque obras literárias.</h3>
                             <p>Por um simples sistema de tags, fica fácil ver qual a disponibilidade do livro que você está interessado.</p>
                             </div>
@@ -139,7 +139,7 @@
             <h2>Acesse pelo celular</h2>
             <hr class="sep">
             <p>Baixe nosso App na Google Store e amplie seu horizonte de conhecimentos literários.</p>
-			<div style="background-image: url(img/portfolio/app.jpg); background-size: 100%; height: 500px;">
+			<div style="background-image: url(img/portfolio/app.jpg); background-size: 100%; height: 400px;">
 				<a class="btn btn-light" href="#" style='margin-top: 150px; width: 300px;'>Instale Agora</a>
 			</div>
                 </div>
