Adição mensagem de boas vindas

--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -51,7 +51,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#owl-hero"></a>
+                    <a class="navbar-brand" href="#"></a>
                 </div>
                 <div class="collapse navbar-collapse text-center" id="bs-example-navbar-collapse-1">
                     <div class="col-md-8 col-xs-12 nav-wrap">
@@ -88,6 +88,17 @@
                     <a class="btn btn-light" href="#portfolio">Baixe Nosso App</a>
                 </div>
             </div>
+        </div>
+    </section>
+
+<!-- Welcome
+	============================================= -->
+    <section id="welcome">
+        <div class="container">
+            <h2>Bem vindo ao <span>B</span>ook<span>A</span>way</h2>
+            <hr class="sep">
+            <h4><i>Movimente seus livros!</i></h4>
+            <!--<img class="img-responsive center-block wow fadeInUp" data-wow-delay=".3s" src="img/welcome/logo.png" alt="logo">-->
         </div>
     </section>
 
