--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -122,7 +122,7 @@
                             <li style="display:inline;">
                             <div style='text-align: left justify; width: 450px; display: inline-block; margin-bottom: 50px;'>
                             <h3 style='color: #fff;'>Encontre livros perto de você.</h3>
-                            <p>Proure por livros disponíveis perto de você, ou então vá direto ao ponto e busque pelo livro que deseja.</p>
+                            <p>Proure por livros disponíveis perto de você, ou vá direto ao ponto e busque pelo livro que deseja.</p>
                             </div>
                             </li>
                             <li style="display:inline;">
@@ -134,7 +134,7 @@
                             <li style="display:inline;">
                             <div style='text-align: left justify; width: 450px; display: inline-block; '>
                             <h3 style='color: #fff;'>Troque ideias com outros leitores.</h3>
-                            <p>Como usuário do BookAway você poderá conversar e encontrar leitores com gostos parecidos com o seu. Caso queira realizar alguma tramitassão, chege a um acordo tratando diretamento com o dono do livro.</p>
+                            <p>Como usuário do BookAway você poderá conversar e encontrar leitores com gostos parecidos com o seu. Caso queira realizar algum negócio, chege a um acordo tratando diretamento com o dono do livro.</p>
                             </div>
                             </li>
                             </ul>
@@ -149,7 +149,7 @@
         <div class="container-fluid">
             <h2>Acesse pelo celular</h2>
             <hr class="sep">
-            <p>Baixe nosso App na Google Store e amplie seu horizonte de conhecimentos literários.</p>
+            <p>Baixe nosso App e amplie seu horizonte de conhecimentos literários.</p>
 			<div style="background-image: url(img/portfolio/app.jpg); background-size: 100%; height: 400px;">
 				<a class="btn btn-light" href="#" style='margin-top: 150px; width: 300px;'>Instale Agora</a>
 			</div>
@@ -195,6 +195,7 @@
         <div style='margin-bottom: 200px;' class="container">
             <h2>Acesse </h2>
             <hr class="light-sep">
+            <p>Comece a movimentar seus livros!</p>
             <div class="col-md-6 col-md-offset-3 wow fadeInUp" data-wow-delay=".3s">
                 <form style='margin-top:70px;'>
 	            <div class="form-group">
