--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -122,7 +122,7 @@
                             <li style="display:inline;">
                             <div style='text-align: left justify; width: 450px; display: inline-block; margin-bottom: 50px;'>
                             <h3 style='color: #fff;'>Encontre livros perto de você.</h3>
-                            <p>Proure por livros disponíveis perto de você, ou vá direto ao ponto e busque pelo livro que deseja.</p>
+                            <p>Procure por livros disponíveis perto de você, ou vá direto ao ponto e busque pelo livro que deseja.</p>
                             </div>
                             </li>
                             <li style="display:inline;">
