Adição do link botão login
Adição do link botão login para página livrosproximos.html

--- a/Web/Prototype/index.html
+++ b/Web/Prototype/index.html
@@ -204,7 +204,7 @@
                     <div class="form-group">
                         <input style= 'border: 2px solid #24242a; color: #fff; min-height: 45px; border-radius: 0;' type="password" class="form-control" id="senha" placeholder="Senha">
                     </div>
-                    <a href="#" class="btn-block" style='background: #fff; color: #0d0d0d; margin-top: 35px;'>Login</a>
+                    <a href="livrosproximos.html" class="btn-block" style='background: #fff; color: #0d0d0d; margin-top: 35px;'>Login</a>
 		    <a href="#" class="btn-block" style='background: #3B5998;' >Login com facebook</a>
                 </form>
             </div>
